# VitaeRules

./: .env.example  .gitignore  .pre-commit-config.yaml  CAPTURECREW_INVESTIGATION.md  CLOUD_OLLAMA_ASSESSMENT.md  Dockerfile  EXAMPLE_LOGS.md  OLLAMA_CLOUD_MODELS_ASSESSMENT.md  QUICKSTART.md  README.md  TEST_SETUP.md  check_chroma.py  check_db.py  check_memories.py  debug_crewai_internals.py  debug_crewai_llm_direct.py  debug_direct_output.txt  debug_direct_output_v2.txt  debug_direct_output_v3.txt  debug_inspect_handler_output.txt  debug_inspect_llm.py  debug_inspect_llm_handler.py  debug_inspect_output.txt  debug_internals_output.txt  debug_internals_output_v2.txt  debug_llm_identity.py  debug_llm_local.py  debug_llm_openai_compat.py  debug_llm_openai_compat_v2.py  debug_llm_tools.py  debug_memory_tool.py  debug_output.txt  debug_output_2.txt  debug_output_v2.txt  debug_output_v3.txt  debug_search_crew.py  debug_tool_calling.py  debug_tool_calling_openai.py  docker-compose.yml  llm_test_results.json  (+27 more)
docs/: APPROVAL_DEADLOCK_FIX.md  ARCHITECTURE_RECONCILIATION.md  ARCHITECTURE_REFACTOR.md  BINARY_SEARCH_ACTION_IMPLEMENTATION.md  CHATCREW_MIGRATION_COMPLETE.md  CHATCREW_TELEGRAM_INTEGRATION.md  CHAT_FALLBACK_IMPLEMENTATION.md  CONDITIONAL_EXECUTION_DEBUG.md  CONTEXT_SHARING_ARCHITECTURE.md  CONVERSATION_FLOWS_DETAILED.md  CREWAI_MEMORY_ANALYSIS.md  CREWAI_ORCHESTRATION_PROS.md  DEPLOY_OPTIMIZATION.md  DEPLOY_PI5.md  ENRICHMENT_DEBUG.md  FIXES_INTENT_ENRICHMENT.md  FLOW_ANALYSIS.md  FLOW_SCHEMA.md  IMPLEMENTATION_SUMMARY.md  INTENT_ANALYSIS_PROMPT.md  OPTIMIZATION_FIXES.md  (+63 more)
(+136 files in other folders)
